# catalyst-select

./: .gitignore  main.py  pyproject.toml  requirements.txt
ase-GA/: K-point.py  config.py  constant.py  example.py  example_run.py  gadb.db  generate-str.py  main.py  read_energy.py  utils.py
ase-GA/Seed/: 1-4p.cif  1.cif  2-4p-2.cif  3.cif
ase-GA/Seed/1/: 1-3p.cif  1-4p-2.cif  2-2p.cif  2-4p.cif  2.cif  3-4p.cif
ase-GA/Seed/2/: Seed1.cif  Seed2.cif  Seed3.cif  Seed4.cif  Seed5.cif  Seed6.cif
ase-GA/cif/: Cu(111).cif  MgO-O-t-rebuild.cif  substrate.cif
ase-GA/generate/: 0-generate_structure.cif  1-generate_structure.cif
ase-GA/generate/opt/: 0-generate_structure  1-generate_structure
calculator/: opt-mace.py  opt_m3gnet.py  read.csv.py
