[project]
name = "catalyst-select"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "ase>=3.25.0",
    "dgl==0.9.1",
    "keras==2.10.0",
    "m3gnet",
    "matgl>=1.2.1",
    "pymatgen==2023.7.20",
    "tensorflow-macos==2.10.0",
    "torch==1.12.1",
]
